--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,6 @@
 {
-    "image": "mcr.microsoft.com/devcontainers/javascript-node:1-20-bookworm",
+    "name": "devcontainer-features",
+    "image": "mcr.microsoft.com/devcontainers/python:3.12",
     "customizations": {
         "vscode": {
             "settings": {
@@ -18,8 +19,8 @@
         }
     },
     "features": {
-        "ghcr.io/devcontainers/features/docker-in-docker:2": {}
+        "./src/uv": {},
+        "./src/uv-persistent-cache": {}
     },
-    "remoteUser": "node",
-    "updateContentCommand": "npm install -g @devcontainers/cli"
+    "remoteUser": "python"
 }
